update readme rename python notebooks

--- a/notebooks/AnomalyDetector/BatchAnomalyDetectorAPI.ipynb
+++ b/notebooks/AnomalyDetector/BatchAnomalyDetectorAPI.ipynb
@@ -49,13 +49,13 @@
     "#  endpoint: https://.../anomalydetector/v1.0/timeseries/entire/detect\n",
     "#  endpoint_latest: https://.../anomalydetector/v1.0/timeseries/last/detect\n",
     "\n",
-    "import yaml\n",
+    "#import yaml\n",
     "\n",
-    "with open(\"config.yml\", 'r') as ymlfile:\n",
-    "    cfg = yaml.safe_load(ymlfile)\n",
+    "#with open(\"config.yml\", 'r') as ymlfile:\n",
+    "#    cfg = yaml.safe_load(ymlfile)\n",
     "\n",
-    "subscription_key = cfg['api_creds']['subscriptionkey']\n",
-    "endpoint = cfg['api_creds']['endpoint']"
+    "#subscription_key = cfg['api_creds']['subscriptionkey']\n",
+    "#endpoint = cfg['api_creds']['endpoint']"
    ]
   },
   {
