--- a/notebooks/Anomaly.ipynb
+++ b/notebooks/Anomaly.ipynb
@@ -2,21 +2,165 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\r\n",
+       "<div>\r\n",
+       "    <div id='dotnet-interactive-this-cell-956.Microsoft.DotNet.Interactive.Http.HttpPort' style='display: none'>\r\n",
+       "        The below script needs to be able to find the current output cell; this is an easy method to get it.\r\n",
+       "    </div>\r\n",
+       "    <script type='text/javascript'>\r\n",
+       "async function probeAddresses(probingAddresses) {\r\n",
+       "    function timeout(ms, promise) {\r\n",
+       "        return new Promise(function (resolve, reject) {\r\n",
+       "            setTimeout(function () {\r\n",
+       "                reject(new Error('timeout'))\r\n",
+       "            }, ms)\r\n",
+       "            promise.then(resolve, reject)\r\n",
+       "        })\r\n",
+       "    }\r\n",
+       "\r\n",
+       "    if (Array.isArray(probingAddresses)) {\r\n",
+       "        for (let i = 0; i < probingAddresses.length; i++) {\r\n",
+       "\r\n",
+       "            let rootUrl = probingAddresses[i];\r\n",
+       "\r\n",
+       "            if (!rootUrl.endsWith('/')) {\r\n",
+       "                rootUrl = `${rootUrl}/`;\r\n",
+       "            }\r\n",
+       "\r\n",
+       "            try {\r\n",
+       "                let response = await timeout(1000, fetch(`${rootUrl}discovery`, {\r\n",
+       "                    method: 'POST',\r\n",
+       "                    cache: 'no-cache',\r\n",
+       "                    mode: 'cors',\r\n",
+       "                    timeout: 1000,\r\n",
+       "                    headers: {\r\n",
+       "                        'Content-Type': 'text/plain'\r\n",
+       "                    },\r\n",
+       "                    body: probingAddresses[i]\r\n",
+       "                }));\r\n",
+       "\r\n",
+       "                if (response.status == 200) {\r\n",
+       "                    return rootUrl;\r\n",
+       "                }\r\n",
+       "            }\r\n",
+       "            catch (e) { }\r\n",
+       "        }\r\n",
+       "    }\r\n",
+       "}\r\n",
+       "\r\n",
+       "function loadDotnetInteractiveApi() {\r\n",
+       "    probeAddresses([\"http://192.168.1.44:1024/\", \"http://127.0.0.1:1024/\"])\r\n",
+       "        .then((root) => {\r\n",
+       "        // use probing to find host url and api resources\r\n",
+       "        // load interactive helpers and language services\r\n",
+       "        let dotnetInteractiveRequire = require.config({\r\n",
+       "        context: '956.Microsoft.DotNet.Interactive.Http.HttpPort',\r\n",
+       "                paths:\r\n",
+       "            {\r\n",
+       "                'dotnet-interactive': `${root}resources`\r\n",
+       "                }\r\n",
+       "        }) || require;\r\n",
+       "\r\n",
+       "            window.dotnetInteractiveRequire = dotnetInteractiveRequire;\r\n",
+       "\r\n",
+       "            window.configureRequireFromExtension = function(extensionName, extensionCacheBuster) {\r\n",
+       "                let paths = {};\r\n",
+       "                paths[extensionName] = `${root}extensions/${extensionName}/resources/`;\r\n",
+       "                \r\n",
+       "                let internalRequire = require.config({\r\n",
+       "                    context: extensionCacheBuster,\r\n",
+       "                    paths: paths,\r\n",
+       "                    urlArgs: `cacheBuster=${extensionCacheBuster}`\r\n",
+       "                    }) || require;\r\n",
+       "\r\n",
+       "                return internalRequire\r\n",
+       "            };\r\n",
+       "        \r\n",
+       "            dotnetInteractiveRequire([\r\n",
+       "                    'dotnet-interactive/dotnet-interactive'\r\n",
+       "                ],\r\n",
+       "                function (dotnet) {\r\n",
+       "                    dotnet.init(window);\r\n",
+       "                },\r\n",
+       "                function (error) {\r\n",
+       "                    console.log(error);\r\n",
+       "                }\r\n",
+       "            );\r\n",
+       "        })\r\n",
+       "        .catch(error => {console.log(error);});\r\n",
+       "    }\r\n",
+       "\r\n",
+       "// ensure `require` is available globally\r\n",
+       "if ((typeof(require) !==  typeof(Function)) || (typeof(require.config) !== typeof(Function))) {\r\n",
+       "    let require_script = document.createElement('script');\r\n",
+       "    require_script.setAttribute('src', 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js');\r\n",
+       "    require_script.setAttribute('type', 'text/javascript');\r\n",
+       "    \r\n",
+       "    \r\n",
+       "    require_script.onload = function() {\r\n",
+       "        loadDotnetInteractiveApi();\r\n",
+       "    };\r\n",
+       "\r\n",
+       "    document.getElementsByTagName('head')[0].appendChild(require_script);\r\n",
+       "}\r\n",
+       "else {\r\n",
+       "    loadDotnetInteractiveApi();\r\n",
+       "}\r\n",
+       "\r\n",
+       "    </script>\r\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Installed package UnitsNet version 4.82.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Installed package System.Device.Gpio version 1.3.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Installed package IoT.Device.Bindings version 1.3.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "#r \"nuget:System.Device.Gpio,1.1.0-prerelease.20276.1\"\n",
-    "#r \"nuget:IoT.Device.Bindings,1.1.0-prerelease.20276.1 \"\n",
-    "#r \"nuget:UnitsNet,4.68.0\""
+    "#r \"nuget:System.Device.Gpio,1.3\"\n",
+    "#r \"nuget:IoT.Device.Bindings,1.3\"\n",
+    "#r \"nuget:UnitsNet,4.82.0\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pragma warning disable CS1702\n",
     "using Iot.Device.SenseHat;\n",
     "using System;\n",
     "using System.Drawing;\n",
@@ -28,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,28 +211,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8/15/2020 6:59:00 PM : 101.35999908447265\n",
-      "8/15/2020 7:00:00 PM : 101.40500183105468\n",
-      "8/15/2020 7:01:00 PM : 101.5324981689453\n",
-      "8/15/2020 7:02:00 PM : 101.50999679565429\n",
-      "8/15/2020 7:03:00 PM : 101.40875091552734\n",
-      "8/15/2020 7:04:00 PM : 101.37500228881835\n",
-      "8/15/2020 7:05:00 PM : 101.39374771118163\n",
-      "8/15/2020 7:06:00 PM : 101.34500274658203\n",
-      "8/15/2020 7:07:00 PM : 101.30374908447264\n",
-      "8/15/2020 7:08:00 PM : 101.38250045776365\n",
-      "8/15/2020 7:09:00 PM : 101.31875228881835\n",
-      "8/15/2020 7:10:00 PM : 101.31875228881835\n",
-      "8/15/2020 7:11:00 PM : 101.15750045776366\n",
-      "8/15/2020 7:12:00 PM : 101.14624633789062\n",
-      "8/15/2020 7:13:00 PM : 101.13125\n"
+      "2/23/2021 9:32:00 PM : 108.5\n",
+      "2/23/2021 9:33:00 PM : 91.77124862670897\n",
+      "2/23/2021 9:34:00 PM : 92.99375228881834\n",
+      "2/23/2021 9:35:00 PM : 94.24249954223632\n",
+      "2/23/2021 9:36:00 PM : 95.34124908447265\n",
+      "2/23/2021 9:37:00 PM : 95.67125091552734\n",
+      "2/23/2021 9:38:00 PM : 96.6949981689453\n",
+      "2/23/2021 9:39:00 PM : 97.19000091552734\n",
+      "2/23/2021 9:40:00 PM : 97.34750366210936\n",
+      "2/23/2021 9:41:00 PM : 97.91750183105468\n",
+      "2/23/2021 9:42:00 PM : 98.397501373291\n",
+      "2/23/2021 9:43:00 PM : 98.58124771118163\n",
+      "2/23/2021 9:44:00 PM : 98.93000183105468\n",
+      "2/23/2021 9:45:00 PM : 99.26000366210937\n",
+      "2/23/2021 9:46:00 PM : 99.22249908447264\n"
      ]
     }
    ],
@@ -103,16 +247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Installed package Microsoft.Azure.CognitiveServices.AnomalyDetector version 1.0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#r \"nuget:Microsoft.Azure.CognitiveServices.AnomalyDetector\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,8 +301,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get Endpoint and Key values, create Anomaly Detector in Azure Portal. https://ms.portal.azure.com/#create/Microsoft.CognitiveServicesAnomalyDetector\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To create a cognitive services service and get the key\n",
+    "```\n",
+    "\n",
+    "az group create \\\n",
+    "    --name cognitive-services-resource-group \\\n",
+    "    --location westus2\n",
+    "    \n",
+    "az cognitiveservices account create \\\n",
+    "    --name anomaly-detector-resource \\\n",
+    "    --resource-group cognitive-services-resource-group \\\n",
+    "    --kind AnomalyDetector \\\n",
+    "    --sku F0 \\\n",
+    "    --location westus2 \\\n",
+    "    --yes\n",
+    "\n",
+    "az cognitiveservices account keys list \\\n",
+    "    --name anomaly-detector-resource \\\n",
+    "    --resource-group cognitive-services-resource-group\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,29 +364,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8/15/2020 6:59:00 PM : 101.35999908447265\n",
-      "8/15/2020 7:00:00 PM : 101.40500183105468\n",
-      "8/15/2020 7:01:00 PM : 101.5324981689453\n",
-      "8/15/2020 7:02:00 PM : 101.50999679565429\n",
-      "8/15/2020 7:03:00 PM : 101.40875091552734\n",
-      "8/15/2020 7:04:00 PM : 101.37500228881835\n",
-      "8/15/2020 7:05:00 PM : 101.39374771118163\n",
-      "8/15/2020 7:06:00 PM : 101.34500274658203\n",
-      "8/15/2020 7:07:00 PM : 101.30374908447264\n",
-      "8/15/2020 7:08:00 PM : 101.38250045776365\n",
-      "8/15/2020 7:09:00 PM : 101.31875228881835\n",
-      "8/15/2020 7:10:00 PM : 101.31875228881835\n",
-      "8/15/2020 7:11:00 PM : 101.15750045776366\n",
-      "8/15/2020 7:12:00 PM : 101.14624633789062\n",
-      "8/15/2020 7:13:00 PM : 101.13125\n",
-      "8/15/2020 7:14:00 PM : 200\n",
+      "2/23/2021 9:32:00 PM : 108.5\n",
+      "2/23/2021 9:33:00 PM : 91.77124862670897\n",
+      "2/23/2021 9:34:00 PM : 92.99375228881834\n",
+      "2/23/2021 9:35:00 PM : 94.24249954223632\n",
+      "2/23/2021 9:36:00 PM : 95.34124908447265\n",
+      "2/23/2021 9:37:00 PM : 95.67125091552734\n",
+      "2/23/2021 9:38:00 PM : 96.6949981689453\n",
+      "2/23/2021 9:39:00 PM : 97.19000091552734\n",
+      "2/23/2021 9:40:00 PM : 97.34750366210936\n",
+      "2/23/2021 9:41:00 PM : 97.91750183105468\n",
+      "2/23/2021 9:42:00 PM : 98.397501373291\n",
+      "2/23/2021 9:43:00 PM : 98.58124771118163\n",
+      "2/23/2021 9:44:00 PM : 98.93000183105468\n",
+      "2/23/2021 9:45:00 PM : 99.26000366210937\n",
+      "2/23/2021 9:46:00 PM : 99.22249908447264\n",
       "System.Collections.Generic.List`1[Microsoft.Azure.CognitiveServices.AnomalyDetector.Models.Point]\n",
       "Detecting the anomaly status of the latest point in the series.\n",
       "Anomaly True\n"
@@ -208,6 +393,7 @@
     }
    ],
    "source": [
+    "#pragma warning disable CS1702\n",
     "foreach (var temp in temperatures)\n",
     "{\n",
     "    Console.WriteLine(temp.dt + \" : \" + temp.val);\n",
@@ -229,10 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pragma warning disable CS1702\n",
     "using Iot.Device.SenseHat;\n",
     "using System;\n",
     "using System.Drawing;\n",
@@ -241,6 +428,13 @@
     "        ledMatrix.Fill(Color.Black);\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
