--- a/notebooks/Anomaly.ipynb
+++ b/notebooks/Anomaly.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -156,8 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "#pragma warning disable CS1702\n",
@@ -172,8 +180,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "async IAsyncEnumerable<double> ReadTemperatureAsync(int count = 10){   \n",
@@ -189,8 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "using System;\n",
@@ -199,8 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "DateTime RoundUp(DateTime dt, TimeSpan d)\n",
@@ -211,8 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -247,8 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -266,8 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "using Microsoft.Azure.CognitiveServices.AnomalyDetector;\n",
@@ -287,8 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "async Task<bool> LastDetectSampleAsync(IAnomalyDetectorClient client, Request request)\n",
@@ -334,8 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "using System;\n",
@@ -352,8 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "IAnomalyDetectorClient client = new AnomalyDetectorClient(new ApiKeyServiceClientCredentials(key))\n",
@@ -364,8 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -415,8 +463,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": [
     "#pragma warning disable CS1702\n",
@@ -432,14 +484,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
    "outputs": [],
    "source": []
   }
